pkginclude_HEADERS = \
	VDisplay.h \
	VError.h \
	VImage.h \
	VMask.h \
	bicubic.h \
	vipscpp.h \
	colour.h \
	debug.h \
	dispatch.h \
	format.h \
	fmask.h \
	mosaic.h \
	interpolate.h \
	object.h \
	proto.h \
	rect.h \
	region.h \
	r_access.h \
	struct.h \
	semaphore.h \
	threadgroup.h \
	thread.h \
	util.h \
	meta.h \
	version.h \
	vips.h \
	yafrsmooth.h \
	yafrnohalo.h \
	yafrtest.h \
	vips \
	intl.h \
	buf.h \
	vipsc++.h 

vipsc++.h:
	vips --cpph all > vipsc++.h

EXTRA_DIST = version.h.in internal.h
