noinst_LTLIBRARIES = libconversion.la

libconversion_la_SOURCES = \
	im_bernd.c \
	im_vips2tiff.c \
	im_tiff2vips.c \
	conver_dispatch.c \
	dbh.h \
	im_bandjoin.c \
	im_analyze2vips.c \
	im_black.c \
	im_c2amph.c \
	im_c2rect.c \
	im_c2imag.c \
	im_c2ps.c \
	im_c2real.c \
	im_clip.c \
	im_copy.c \
	im_csv2vips.c \
	im_vips2csv.c \
	im_extract.c \
	im_exr2vips.c \
	im_falsecolour.c \
	im_fliphor.c \
	im_flipver.c \
	im_gbandjoin.c \
	im_insert.c \
	im_jpeg2vips.c \
	im_lrjoin.c \
	im_magick2vips.c \
	im_mask2vips.c \
	im_msb.c \
	im_png2vips.c \
	im_ppm2vips.c \
	im_recomb.c \
	im_replicate.c \
	im_grid.c \
	im_raw2vips.c \
	im_ri2c.c \
	im_rightshift_size.c \
	im_rot180.c \
	im_rot270.c \
	im_rot90.c \
	im_scale.c \
	im_scaleps.c \
	im_slice.c \
	im_subsample.c \
	im_system.c \
	im_print.c \
	im_tbjoin.c \
	im_tile_cache.c \
	im_text.c \
	im_thresh.c \
	im_vips2mask.c \
	im_vips2jpeg.c \
	im_vips2ppm.c \
	im_vips2png.c \
	im_zoom.c

INCLUDES = -I${top_srcdir}/include @VIPS_CFLAGS@ @VIPS_INCLUDES@
