noinst_LTLIBRARIES = libhistograms_lut.la

libhistograms_lut_la_SOURCES = \
	hist_dispatch.c \
	im_gammacorrect.c \
	im_heq.c \
	im_hist.c \
	im_histeq.c \
	im_histgr.c \
	im_histnD.c \
	im_histplot.c \
	im_histspec.c \
	im_hsp.c \
	im_identity.c \
	im_invertlut.c \
	im_lhisteq.c \
	im_maplut.c \
	im_buildlut.c \
	im_project.c \
	im_stdif.c \
	tone.c

INCLUDES = -I${top_srcdir}/include @VIPS_CFLAGS@ @VIPS_INCLUDES@ 
