noinst_LTLIBRARIES = libother.la

libother_la_SOURCES = \
	cooc_funcs.c \
	glds_funcs.c \
	im_benchmark.c \
	im_dif_std.c \
	im_eye.c \
	im_grey.c \
	im_make_xy.c \
	im_meanstd.c \
	im_simcontr.c \
	im_sines.c \
	im_spatres.c \
	im_zone.c \
	other_dispatch.c

INCLUDES = -I${top_srcdir}/include @VIPS_CFLAGS@ @VIPS_INCLUDES@ 
