noinst_LTLIBRARIES = libarithmetic.la

libarithmetic_la_SOURCES = \
	abs.c \
	complex.c \
	deviate.c \
	divide.c \
	measure.c \
	multiply.c \
	remainder.c \
	sign.c \
	stats.c \
	statistic.c \
	statistic.h \
	avg.c \
	min.c \
	max.c \
	subtract.c \
	math.c \
	arithmetic.c \
	arithmetic.h \
	binary.c \
	binary.h \
	unary.c \
	unary.h \
	unaryconst.c \
	unaryconst.h \
	relational.c \
	boolean.c \
	add.c \
	linear.c \
	invert.c \
	math2.c \
	round.c 

AM_CPPFLAGS = -I${top_srcdir}/libvips/include @VIPS_CFLAGS@ @VIPS_INCLUDES@ 
