noinst_LTLIBRARIES = libarithmetic.la

libarithmetic_la_SOURCES = \
	sum.c \
	abs.c \
	complex.c \
	deviate.c \
	divide.c \
	measure.c \
	getpoint.c \
	multiply.c \
	remainder.c \
	sign.c \
	statistic.c \
	statistic.h \
	stats.c \
	avg.c \
	min.c \
	max.c \
	hist_find.c \
	hist_find_ndim.c \
	hist_find_indexed.c \
	project.c \
	profile.c \
	subtract.c \
	math.c \
	arithmetic.c \
	parithmetic.h \
	binary.c \
	binary.h \
	unary.c \
	unary.h \
	nary.c \
	nary.h \
	unaryconst.c \
	unaryconst.h \
	relational.c \
	boolean.c \
	add.c \
	linear.c \
	invert.c \
	math2.c \
	round.c 

AM_CPPFLAGS = -I${top_srcdir}/libvips/include @VIPS_CFLAGS@ @VIPS_INCLUDES@ 
